--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.5",
+    "cors": "^2.8.5",
     "dom": "^0.0.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
